# pymagsims

./: .gitattributes  README.md  pyproject.toml
data/: FPD_01_2604281458290.csv  FPD_image2.csv  FPD_image2.raw
notebooks/: 01_quickstart.ipynb  02_spectrum_analysis.ipynb  03_peak_identification.ipynb  04_raw_image_processing.ipynb  05_mass_filtered_imaging.ipynb  06_processed_image_import.ipynb  07_interactive_analysis.ipynb  08_full_workflow.ipynb  README.md
notebooks/.ipynb_checkpoints/: 01_quickstart-checkpoint.ipynb  02_spectrum_analysis-checkpoint.ipynb  03_peak_identification-checkpoint.ipynb  04_raw_image_processing-checkpoint.ipynb  06_processed_image_import-checkpoint.ipynb  08_full_workflow-checkpoint.ipynb  99_testing-checkpoint.ipynb
src/pymagsims/: __init__.py  binning.py  image.py  interactive.py  io.py  isotopes.py  peaks.py  plotting.py  raw_image.py  spectrum.py
src/pymagsims/.ipynb_checkpoints/: interactive-checkpoint.py  peaks-checkpoint.py  plotting-checkpoint.py  spectrum-checkpoint.py
tests/: test_io.py  test_peaks.py  test_raw_image.py
tests/.ipynb_checkpoints/: test_binning-checkpoint.py
tests/data/: FPD_01_2604281458290.csv  FPD_01_2604281458290.raw
