[project]
name = "pymagsims"
version = "0.1.0"
description = "Python tools for MagSIMS spectrum and image analysis"
readme = "README.md"
license = "GPL-3.0-or-later"
authors = [
    { name = "Till", email = "till@lssnr.de" }
]
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.7",
    "lab>=8.9",
    "matplotlib>=3.10.9",
    "nbformat>=5.10.4",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "scipy>=1.17.1",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]
interactive = ["plotly"]

[project.scripts]
pymagsims = "pymagsims:main"

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
